--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -19,4 +19,42 @@ img {
   width: 100px;
   height: 100px;
 }
+
+.AboutUs {
+  background-color: #f4f4f4;
+  font-family: 'Roboto';
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.AboutUs .ABimg {
+  width: 400px;
+  height: 400px;
+}
+
+.AboutUs .description {
+  width: 600px;
+}
+
+.Footer {
+  background-color: #676767;
+  font-family: 'Roboto';
+}
+
+.Footer .linksRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
 /*# sourceMappingURL=global.css.map */
