--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.css
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.css
@@ -1,1 +1,17 @@
-/* No CSS *//*# sourceMappingURL=Footer.css.map */
+.Footer {
+  background-color: #676767;
+  font-family: 'Roboto';
+}
+
+.Footer .linksRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+/*# sourceMappingURL=Footer.css.map */
