--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.css
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.css
@@ -14,4 +14,17 @@
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
+
+.Footer .theCenter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 /*# sourceMappingURL=Footer.css.map */
