--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
@@ -6,4 +6,9 @@
     flex-direction: row;
     justify-content: space-around;
   }
+  .theCenter {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
