--- a/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
+++ b/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
@@ -1,4 +1,4 @@
-.AboutUs {
+.about-us {
   background-color: #f4f4f4;
   font-family: 'Roboto';
   display: -webkit-box;
@@ -10,12 +10,12 @@
           flex-direction: row;
 }
 
-.AboutUs .ABimg {
+.about-us .ab-img {
   width: 200px;
   height: 200px;
 }
 
-.AboutUs .description {
+.about-us .description {
   width: 600px;
 }
 /*# sourceMappingURL=AboutUs.css.map */
