--- a/public/assets/Styles/01.Homepage/AboutUs/AboutUs.scss
+++ b/public/assets/Styles/01.Homepage/AboutUs/AboutUs.scss
@@ -1,9 +1,9 @@
-.AboutUs {
+.about-us {
   background-color: #f4f4f4;
   font-family: 'Roboto';
   display: flex;
   flex-direction: row;
-  .ABimg {
+  .ab-img {
     width: 200px;
     height: 200px;
   }
