--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
@@ -1,12 +1,12 @@
-.Footer {
+.footer {
   background-color: #676767;
   font-family: 'Roboto';
-  .linksRow {
+  .links-row {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
-  .theCenter {
+  .the-center {
     display: flex;
     flex-direction: row;
     justify-content: center;
