--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -19,4 +19,282 @@ img {
   width: 100px;
   height: 100px;
 }
+
+.loginContainer {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.loginCenterDiv {
+  width: 700px;
+  height: 85vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.loginPageLogoDiv {
+  width: 85%;
+  height: 146px;
+  padding: 10px;
+  background-color: #20B2AA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+}
+
+.pinchLogo {
+  width: 70%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.credentialsDiv {
+  margin-top: -60px;
+  width: 85%;
+  height: 550px;
+  padding: 30px;
+  background-color: #D1E0DE;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.credentialsDiv .credentialsTitle {
+  font-size: 40px;
+  color: #5D5D5D;
+}
+
+.credentialsDiv .loginForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+}
+
+.credentialsDiv .loginInputTitle {
+  font-size: 20px;
+  width: 75%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  color: #5D5D5D;
+}
+
+.credentialsDiv .loginInput {
+  width: 75%;
+  height: 45px;
+  padding-left: 10px;
+  margin-bottom: 18px;
+  border: none;
+  font-size: 20px;
+}
+
+.credentialsDiv .loginInput::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  color: #9c9c9c;
+  font-weight: lighter;
+}
+
+.credentialsDiv .loginInput::-moz-placeholder {
+  /* Firefox 19+ */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #9c9c9c;
+}
+
+.credentialsDiv .loginInput:-ms-input-placeholder {
+  /* IE 10+ */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #9c9c9c;
+}
+
+.credentialsDiv .loginInput:-moz-placeholder {
+  /* Firefox 18- */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  color: #9c9c9c;
+  font-weight: lighter;
+}
+
+.credentialsDiv .rememberMe {
+  width: 75%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 18px;
+  color: #5D5D5D;
+}
+
+.credentialsDiv .rememberMeLabel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.credentialsDiv .rememberMeChk {
+  margin-right: 8px;
+  width: 22px;
+  height: 22px;
+}
+
+.credentialsDiv .signInBtn {
+  width: 75%;
+  padding: 12px;
+  font-size: 25px;
+  background-color: #20B2AA;
+  color: white;
+  border: none;
+  margin-bottom: 5px;
+  cursor: pointer;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.credentialsDiv .signInBtn:hover {
+  background-color: #1c9993;
+}
+
+.credentialsDiv .agreement {
+  width: 60%;
+  font-size: 12px;
+  margin-bottom: 18px;
+  text-align: center;
+  color: #5D5D5D;
+  font-style: italic;
+}
+
+.credentialsDiv .noAccount {
+  width: 70%;
+  font-size: 25px;
+  color: #5f5f5f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+}
+
+.credentialsDiv .noAccount :nth-child(2) {
+  text-decoration: underline;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.rightsTextDiv {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  margin-bottom: -50px;
+}
+
+.rightsText {
+  font-size: 15px;
+  text-align: center;
+  color: #5D5D5D;
+}
 /*# sourceMappingURL=global.css.map */
