--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -20,7 +20,7 @@ img {
   height: 100px;
 }
 
-.AboutUs {
+.about-us {
   background-color: #f4f4f4;
   font-family: 'Roboto';
   display: -webkit-box;
@@ -32,21 +32,21 @@ img {
           flex-direction: row;
 }
 
-.AboutUs .ABimg {
+.about-us .ab-img {
   width: 200px;
   height: 200px;
 }
 
-.AboutUs .description {
+.about-us .description {
   width: 600px;
 }
 
-.Footer {
+.footer {
   background-color: #676767;
   font-family: 'Roboto';
 }
 
-.Footer .linksRow {
+.footer .links-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,7 +58,7 @@ img {
       justify-content: space-around;
 }
 
-.Footer .theCenter {
+.footer .the-center {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
