--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.css
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.css
@@ -1,9 +1,9 @@
-.Footer {
+.footer {
   background-color: #676767;
   font-family: 'Roboto';
 }
 
-.Footer .linksRow {
+.footer .links-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,7 +15,7 @@
       justify-content: space-around;
 }
 
-.Footer .theCenter {
+.footer .the-center {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
