--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.css
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.css
@@ -1,6 +1,18 @@
 .footer {
   background-color: #676767;
   font-family: 'Roboto';
+  color: white;
+  font-size: 1.2em;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .footer .links-row {
