--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
@@ -1,6 +1,12 @@
 .footer {
   background-color: #676767;
   font-family: 'Roboto';
+  color: white;
+  font-size: 1.2em;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   .links-row {
     display: flex;
     flex-direction: row;
