Modified CSS for login page to accomodate other screen sizes (not mobile yet) (#22)
* Added login html elements

* Completed styling for login page

* Added styling for login page

* Changed single quotes to double quotes

* Styling changes to accomodate for various computer screen sizes

* Changed classnames to hyphenated names

* Changed camel case to hyphenated classnames

* Moved login page outside of div with navbar

* Changed camel-case

* Changed some camelcase to hyphencase

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -1,3 +1,11 @@
-@import '../01.Homepage/Homepage.scss';
-@import '../03.Login/Login.scss';
-@import '../SharedComponents/01.Header/Header.scss';
+@import "../01.Homepage/Homepage.scss";
+@import "../03.Login/Login.scss";
+@import "../SharedComponents/01.Header/Header.scss";
+
+body,
+html {
+  padding: 0;
+  margin: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
