--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -1,25 +1,4 @@
-.loginContainer {
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: "Avenir";
-}
-
-.loginCenterDiv {
-  width: 700px;
-  height: 85vh;
+.login-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,13 +16,64 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
+  height: 100vh;
 }
 
-.loginPageLogoDiv {
-  width: 85%;
-  height: 146px;
-  padding: 10px;
-  background-color: #20B2AA;
+@media screen and (max-height: 723px) {
+  .login-container {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .login-container {
+    width: 100vw;
+  }
+}
+
+.login-center-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.login-main-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 700px;
+}
+
+@media screen and (max-width: 700px) {
+  .login-main-div {
+    width: 100vw;
+  }
+}
+
+.login-page-logo-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,21 +88,24 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-family: "Avenir";
+  width: 85%;
+  height: 146px;
+  padding: 10px;
+  background-color: #20b2aa;
 }
 
-.pinchLogo {
+.pinch-logo {
   width: 70%;
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.credentialsDiv {
-  margin-top: -60px;
+.credentials-div {
+  margin-top: 20px;
   width: 85%;
-  height: 550px;
   padding: 30px;
-  background-color: #D1E0DE;
+  background-color: #d1e0de;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,12 +118,12 @@
           align-items: center;
 }
 
-.credentialsDiv .credentialsTitle {
+.credentials-div .credentials-title {
   font-size: 40px;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
-.credentialsDiv .loginForm {
+.credentials-div .login-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -110,16 +143,22 @@
   margin-top: 70px;
 }
 
-.credentialsDiv .loginInputTitle {
+@media screen and (max-height: 1000px) {
+  .credentials-div .login-form {
+    margin-top: 10px;
+  }
+}
+
+.credentials-div .login-input-title {
   font-size: 20px;
   width: 75%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
-.credentialsDiv .loginInput {
+.credentials-div .login-input {
   width: 75%;
   height: 45px;
   padding-left: 10px;
@@ -128,7 +167,7 @@
   font-size: 20px;
 }
 
-.credentialsDiv .loginInput::-webkit-input-placeholder {
+.credentials-div .login-input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   position: relative;
   font-size: 20px;
@@ -137,7 +176,7 @@
   font-weight: lighter;
 }
 
-.credentialsDiv .loginInput::-moz-placeholder {
+.credentials-div .login-input::-moz-placeholder {
   /* Firefox 19+ */
   position: relative;
   font-size: 20px;
@@ -146,7 +185,7 @@
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-ms-input-placeholder {
+.credentials-div .login-input:-ms-input-placeholder {
   /* IE 10+ */
   position: relative;
   font-size: 20px;
@@ -155,7 +194,7 @@
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-moz-placeholder {
+.credentials-div .login-input:-moz-placeholder {
   /* Firefox 18- */
   position: relative;
   font-size: 20px;
@@ -164,16 +203,16 @@
   font-weight: lighter;
 }
 
-.credentialsDiv .rememberMe {
+.credentials-div .remember-me {
   width: 75%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
   margin-bottom: 18px;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
-.credentialsDiv .rememberMeLabel {
+.credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -193,17 +232,17 @@
           justify-content: start;
 }
 
-.credentialsDiv .rememberMeChk {
+.credentials-div .remember-me-chk {
   margin-right: 8px;
   width: 22px;
   height: 22px;
 }
 
-.credentialsDiv .signInBtn {
+.credentials-div .sign-in-btn {
   width: 75%;
   padding: 12px;
   font-size: 25px;
-  background-color: #20B2AA;
+  background-color: #20b2aa;
   color: white;
   border: none;
   margin-bottom: 5px;
@@ -212,23 +251,20 @@
   transition: 0.1s ease-in;
 }
 
-.credentialsDiv .signInBtn:hover {
+.credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
 
-.credentialsDiv .agreement {
+.credentials-div .agreement {
   width: 60%;
   font-size: 12px;
   margin-bottom: 18px;
   text-align: center;
-  color: #5D5D5D;
+  color: #5d5d5d;
   font-style: italic;
 }
 
-.credentialsDiv .noAccount {
-  width: 70%;
-  font-size: 25px;
-  color: #5f5f5f;
+.credentials-div .no-account {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -243,16 +279,18 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-family: "Avenir";
+  width: 70%;
+  font-size: 25px;
+  color: #5f5f5f;
 }
 
-.credentialsDiv .noAccount :nth-child(2) {
+.credentials-div .no-account :nth-child(2) {
   text-decoration: underline;
   margin-left: 5px;
   cursor: pointer;
 }
 
-.rightsTextDiv {
-  width: 100%;
+.rights-text-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,12 +305,15 @@
       -ms-flex-direction: column;
           flex-direction: column;
   font-family: "Avenir";
-  margin-bottom: -50px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  margin-bottom: 20px;
 }
 
-.rightsText {
+.rights-text {
   font-size: 15px;
   text-align: center;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 /*# sourceMappingURL=Login.css.map */
