--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -7,6 +7,6 @@ body,
 html {
   padding: 0;
   margin: 0;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  // overflow-y: hidden;
+  // overflow-x: hidden;
 }
