css added to tools offered

--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -1,20 +1,26 @@
-.about-us {
+.tools-offered {
   background-color: #ffffff;
   font-family: 'Roboto';
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  height: 300px;
   width: 100%;
-  .ab-img {
-    height: 250px;
-    width: 40%;
-    margin: 2%;
+  .tool-slot {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 300px;
   }
-  .description {
+  .example-image {
+    height: 250px;
+    width: 50%;
+  }
+  .about-tool {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    text-align: center;
     color: #696969;
     font-size: 1.3em;
     width: 50%;
