--- a/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
+++ b/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
@@ -1,5 +1,5 @@
 .about-us {
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   font-family: 'Roboto';
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8,14 +8,32 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 300px;
+  width: 100%;
 }
 
 .about-us .ab-img {
-  width: 200px;
-  height: 200px;
+  height: 250px;
+  width: 40%;
+  margin: 2%;
 }
 
 .about-us .description {
-  width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  color: #696969;
+  font-size: 1.3em;
+  width: 50%;
+  height: 250px;
 }
 /*# sourceMappingURL=AboutUs.css.map */
