--- a/public/assets/Styles/01.Homepage/Homepage.css
+++ b/public/assets/Styles/01.Homepage/Homepage.css
@@ -5,23 +5,64 @@
   padding: 0;
 }
 
-img {
-  width: 50px;
-  height: 50px;
-}
-
 .tools-offered {
-  background-color: #f4f4f4;
-  font-family: "Roboto";
+  background-color: #ffffff;
+  font-family: 'Roboto';
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 1300px;
 }
 
-.tools-offered img {
-  width: 100px;
-  height: 100px;
+.tools-offered .tool-slot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 300px;
+}
+
+.tools-offered .example-image {
+  height: 250px;
+  width: 50%;
+}
+
+.tools-offered .about-tool {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  text-align: center;
+  color: #696969;
+  font-size: 1em;
+  width: 50%;
+  height: 250px;
 }
 
 .about-us {
-  background-color: #E5F2FA;
+  background-color: #ffffff;
   font-family: 'Roboto';
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,6 +85,8 @@ img {
 }
 
 .about-us .description {
+  width: 50%;
+  height: 250px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -55,8 +98,6 @@ img {
       justify-content: space-around;
   color: #696969;
   font-size: 1.3em;
-  width: 50%;
-  height: 250px;
 }
 
 .sign-up {
@@ -71,9 +112,8 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin-top: 40px;
   margin-bottom: 40px;
 }
@@ -86,9 +126,8 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .sign-up .logo-smoll {
@@ -99,6 +138,7 @@ img {
 }
 
 .sign-up .column-words {
+  height: 250px;
   width: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -142,8 +182,9 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .sign-up .button-sign-up {
