--- a/public/assets/Styles/01.Homepage/SignUp/SignUp.css
+++ b/public/assets/Styles/01.Homepage/SignUp/SignUp.css
@@ -10,9 +10,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   margin-top: 40px;
   margin-bottom: 40px;
 }
@@ -25,9 +24,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .sign-up .logo-smoll {
@@ -38,6 +36,7 @@
 }
 
 .sign-up .column-words {
+  height: 250px;
   width: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -81,8 +80,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .sign-up .button-sign-up {
