--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
@@ -1,3 +1,10 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .tools-offered {
   background-color: #ffffff;
   font-family: 'Roboto';
@@ -14,6 +21,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 1300px;
 }
 
 .tools-offered .tool-slot {
@@ -43,11 +51,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   text-align: center;
   color: #696969;
-  font-size: 1.3em;
+  font-size: 1em;
   width: 50%;
   height: 250px;
 }
