--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .tools-offered {
   background-color: #ffffff;
   font-family: 'Roboto';
@@ -6,6 +11,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  height: 1300px;
   .tool-slot {
     display: flex;
     flex-direction: row;
@@ -19,10 +25,10 @@
   .about-tool {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     text-align: center;
     color: #696969;
-    font-size: 1.3em;
+    font-size: 1em;
     width: 50%;
     height: 250px;
   }
