home page scssed

--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -17,6 +17,7 @@
     flex-direction: row;
     justify-content: center;
     height: 300px;
+    width: 100%;
   }
   .example-image {
     height: 250px;
