--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
@@ -36,6 +36,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   height: 300px;
+  width: 100%;
 }
 
 .tools-offered .example-image {
