--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -42,15 +42,28 @@ img {
   height: 100vh;
 }
 
-@media screen and (max-height: 723px) {
+@media screen and (max-width: 600px) {
   .signUp-container {
-    height: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    background-color: #d1e0de;
   }
 }
 
 @media screen and (max-width: 450px) {
   .signUp-container {
     width: 100vw;
+  }
+}
+
+.signUp-empty-div {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .signUp-empty-div {
+    display: none;
   }
 }
 
@@ -116,6 +129,12 @@ img {
   background-color: #20b2aa;
 }
 
+@media screen and (max-width: 600px) {
+  .signUp-page-logo-div {
+    width: 100%;
+  }
+}
+
 .pinch-logo {
   width: 70%;
   height: 100%;
@@ -140,6 +159,25 @@ img {
           align-items: center;
 }
 
+@media screen and (max-height: 723px) {
+  .signup-credentials-div {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div {
+    padding: 30px 0 30px 0;
+  }
+}
+
 .signup-credentials-div .signup-title {
   font-size: 30px;
   color: #5d5d5d;
@@ -162,7 +200,8 @@ img {
   font-family: "Avenir";
   width: 100%;
   position: relative;
-  margin-top: 70px;
+  margin-top: 35px;
+  margin-bottom: 5px;
 }
 
 @media screen and (max-height: 1000px) {
@@ -180,13 +219,25 @@ img {
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .signUp-input-title {
+    width: 90%;
+  }
+}
+
 .signup-credentials-div .signUp-input {
-  width: 75%;
+  width: 100%;
   height: 45px;
   padding-left: 10px;
   margin-bottom: 18px;
   border: none;
   font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .signUp-input {
+    width: 100%;
+  }
 }
 
 .signup-credentials-div .signUp-input::-webkit-input-placeholder {
@@ -225,6 +276,41 @@ img {
   font-weight: lighter;
 }
 
+.signup-credentials-div .input-container {
+  width: 75%;
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .input-container {
+    width: 90%;
+  }
+}
+
+.signup-credentials-div .input-container[data-error] .signUp-input {
+  border-color: #da5560;
+  border: 1px solid;
+  color: #da5560;
+  background: #fcc8c8;
+}
+
+.signup-credentials-div .input-container[data-error] .form-control {
+  border-color: #da5560;
+  border: 1px solid;
+  color: #da5560;
+  background: #fcc8c8;
+}
+
+.signup-credentials-div .input-container[data-error]::after {
+  content: attr(data-error);
+  font-size: 15px;
+  font-weight: bold;
+  color: #da5560;
+  display: block;
+  position: absolute;
+  margin-top: -15px;
+  margin-bottom: 6px;
+}
+
 .signup-credentials-div .remember-me {
   width: 75%;
   -webkit-box-pack: start;
@@ -232,6 +318,12 @@ img {
           justify-content: flex-start;
   margin-bottom: 18px;
   color: #5d5d5d;
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .remember-me {
+    width: 90%;
+  }
 }
 
 .signup-credentials-div .remember-me-label {
@@ -274,6 +366,14 @@ img {
   transition: 0.1s ease-in;
 }
 
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .signin-signup-btn {
+    -webkit-transition: none;
+    transition: none;
+    width: 90%;
+  }
+}
+
 .signup-credentials-div .signin-signup-btn:hover {
   background-color: #1c9993;
 }
@@ -285,6 +385,12 @@ img {
   text-align: center;
   color: #5d5d5d;
   font-style: italic;
+}
+
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .agreement {
+    width: 80%;
+  }
 }
 
 .signup-credentials-div .have-account {
@@ -306,11 +412,18 @@ img {
   font-size: 25px;
   color: #5f5f5f;
   margin-top: 15px;
+  text-align: center;
 }
 
-.signup-credentials-div .have-account :nth-child(2) {
-  text-decoration: underline;
-  margin-left: 5px;
+@media screen and (max-width: 600px) {
+  .signup-credentials-div .have-account {
+    width: 90%;
+    margin-top: 10px;
+  }
+}
+
+.signup-credentials-div .login-link {
+  margin-left: 7px;
   cursor: pointer;
 }
 
@@ -335,6 +448,14 @@ img {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  .rights-text-div {
+    width: 90%;
+    padding-top: 30px;
+    border-top: 0.5px solid white;
+  }
+}
+
 .rights-text {
   font-size: 13px;
   text-align: center;
@@ -342,7 +463,13 @@ img {
 }
 
 .react-tel-input {
-  width: 75%;
+  width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .react-tel-input {
+    width: 100%;
+  }
 }
 
 .react-tel-input .form-control {
@@ -466,6 +593,12 @@ img {
   max-height: 220px;
   overflow-y: scroll;
   border-radius: 7px;
+}
+
+@media screen and (max-width: 600px) {
+  .react-tel-input .country-list {
+    width: 560%;
+  }
 }
 
 .react-tel-input .country-list .flag {
@@ -918,7 +1051,7 @@ img {
 }
 
 .credentials-div .signup-link {
-  margin-left: 5px;
+  margin-left: 7px;
   cursor: pointer;
 }
 
