--- a/public/assets/Styles/SharedComponents/01.Header/Header.scss
+++ b/public/assets/Styles/SharedComponents/01.Header/Header.scss
@@ -1,3 +1,26 @@
 .header {
   background-color: #37b2aa;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 120px;
+  .header-logo {
+    margin-left: 10px;
+    width: 210px;
+    height: 100px;
+  }
+  .header-contents {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 300px;
+    align-items: center;
+    margin-right: 10px;
+    .link {
+      color: #FFFFFF;
+      text-decoration: none;
+      font-size: 1.2em;
+    }
+  }
 }
