--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.css
@@ -17,11 +17,17 @@
           flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   width: 100%;
   height: 1300px;
+  margin-top: 40px;
+}
+
+.tools-offered .tools {
+  float: left;
+  width: 45%;
+  margin-left: 5%;
+  color: #696969;
+  border-bottom: solid #696969 3px;
 }
 
 .tools-offered .tool-slot {
