Added validation for login (#29)
* Added login html elements

* Completed styling for login page

* Added styling for login page

* Changed single quotes to double quotes

* Styling changes to accomodate for various computer screen sizes

* Changed classnames to hyphenated names

* Changed camel case to hyphenated classnames

* Moved login page outside of div with navbar

* Changed camel-case

* Changed some camelcase to hyphencase

* Working on mobile for login

* Merge conflict fix

* Conflict changes

* Added mobile styling to login page

* Removed extra space

* Added new validation file for login, temporarily validates using dummy data

* Removed validation for email

--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -703,10 +703,8 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: white;
 }
 
 @media screen and (max-width: 600px) {
@@ -892,18 +890,12 @@ img {
 }
 
 .credentials-div .login-input {
-  width: 75%;
+  width: 100%;
   height: 45px;
   padding-left: 10px;
   margin-bottom: 18px;
   border: none;
   font-size: 20px;
-}
-
-@media screen and (max-width: 600px) {
-  .credentials-div .login-input {
-    width: 90%;
-  }
 }
 
 .credentials-div .login-input::-webkit-input-placeholder {
@@ -940,6 +932,26 @@ img {
   font-style: italic;
   color: #9c9c9c;
   font-weight: lighter;
+}
+
+.credentials-div .input-container {
+  width: 75%;
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div .input-container {
+    width: 90%;
+  }
+}
+
+.credentials-div .input-container[data-error]::after {
+  content: attr(data-error);
+  font-size: 15px;
+  font-weight: bold;
+  color: #da5560;
+  display: block;
+  position: absolute;
+  margin-top: -19px;
 }
 
 .credentials-div .remember-me {
