Added CSS to home page (#31)
* added airbnb style

* linting

* added typescript to linter

* tsc init

* tried to fix linter errors

* please work

* successful hunting bugs

* trying typescript

* can render to the page

* about us page

* scss attempt

* styled footer and about us kind of

* fixed comments

* now passing all pre tests

* changed version number

* styles rewatched

* changed color of font and size of font for footer

* changed to hosted image in header

* some progress on sign up box

* sign up box

* css added to tools offered

* fixed boreder box issue

* home page scssed

* addded some css to header

* added CSS tools we offer

* removed this is homepage message

* added reviewe suggestions

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -4,9 +4,12 @@
 @import "../02.Signup/additional-info/additionalInfo.scss";
 @import "../03.Login/Login.scss";
 @import "../SharedComponents/01.Header/Header.scss";
+@import "../SharedComponents/03.Footer/Footer.scss";
 
 body,
 html {
   padding: 0;
   margin: 0;
+  // overflow-y: hidden;
+  // overflow-x: hidden;
 }
