added screen responsivness to home page and removed credit part

--- a/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
+++ b/public/assets/Styles/01.Homepage/AboutUs/AboutUs.css
@@ -36,4 +36,11 @@
   color: #696969;
   font-size: 1.3em;
 }
+
+@media screen and (max-width: 627px) {
+  .about-us .description {
+    height: 200px;
+    font-size: 1em;
+  }
+}
 /*# sourceMappingURL=AboutUs.css.map */
