--- a/public/assets/Styles/01.Homepage/Homepage.css
+++ b/public/assets/Styles/01.Homepage/Homepage.css
@@ -107,6 +107,13 @@
   font-size: 1.3em;
 }
 
+@media screen and (max-width: 627px) {
+  .about-us .description {
+    height: 200px;
+    font-size: 1em;
+  }
+}
+
 .sign-up {
   background-color: #D1E0DE;
   font-family: 'Roboto';
@@ -125,6 +132,22 @@
   margin-bottom: 40px;
 }
 
+@media screen and (max-width: 1000px) {
+  .sign-up {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    height: 500px;
+  }
+}
+
 .sign-up .container-logo-words {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -135,6 +158,21 @@
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+@media screen and (max-width: 1000px) {
+  .sign-up .container-logo-words {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
 }
 
 .sign-up .logo-smoll {
@@ -158,6 +196,12 @@
       justify-content: space-around;
 }
 
+@media screen and (max-width: 630px) {
+  .sign-up .column-words {
+    width: 40%;
+  }
+}
+
 .sign-up .underline {
   border-bottom: solid #696969 3px;
   padding-bottom: 5px;
@@ -175,6 +219,12 @@
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding-bottom: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+  .sign-up .column-description {
+    height: 40%;
+  }
 }
 
 .sign-up .pargaph-size {
