--- a/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
+++ b/public/assets/Styles/SharedComponents/03.Footer/Footer.scss
@@ -7,10 +7,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  @media screen and (max-width: 457px) {
+    height: 300px;
+  }
   .links-row {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    @media screen and (max-width: 457px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      text-align: center;
+    }
   }
   .the-center {
     display: flex;
