Settings/Profile + Navbar/header (#33)
* Installed graphql, apollo, express-server and initialized server app.ts page

* Connected to localhost:4000/graphql, now attemtping to connect front end to graphql sever

* Created fetch route on handlesubmit to retreive graphql server user data, still testing

* Fixing package lock for graphql set up push`

* Successfully connected frontend to graphql

* Created currentUser & error states for future purposes. Currently the axios request is not handling errors properly due to how the the error is thrown on server side- need to fix this eventually

* Completely set up login authentication, cookie session, and hashrouter for refreshes

* Commenting out import due to ESLint error, but currently not important

* Commenting out import file ESLint error

* Disabling some unnecessary eslint errors

* Updated package lock

* Removing h1 tag

* Created Sign up page, styled it to match Login page, has links to login page, functionality 40% complete

* Minor changes to Sing up styling

* Implemented simple validation functions and subsequent error messaging on front end

* Added simple input validaiton for phone number + error messaging front end

* Created password checker modal for sign up page (validates & shows checklist completion on typing-

* styling for password checker modal

* Created additional information page (transition page between sign up and home page - not accessible through other means) styled but not functional yet

* Fixing merge conflicts

* Styled Header & navbar to match mock up

* Connected routes for home/overview when successfuly logged in and also log out paths

* Created and styled profile page and forms in settings - not functional yet

* Added button functionality to the tabs and created the Accounts page.

* Created notifcations page and settings page + styling. Notifications page still needs mobile styling

* Fixing width on header

* Fixed spacing and 

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -5,6 +5,12 @@
 @import "../03.Login/Login.scss";
 @import "../SharedComponents/01.Header/Header.scss";
 @import "../SharedComponents/03.Footer/Footer.scss";
+@import "../SharedComponents/02.Navbar/Navbar.scss";
+@import "../04.Settings/Settings.scss";
+@import "../04.Settings/Profile/Profile.scss";
+@import "../04.Settings/YourAccount/YourAccount.scss";
+@import "../04.Settings/Notifications/Notifications.scss";
+@import "../04.Settings/UserSettings/UserSettings.scss";
 
 body,
 html {
